Use git repository

--- a/minisound_ffi/pubspec.yaml
+++ b/minisound_ffi/pubspec.yaml
@@ -12,7 +12,9 @@ environment:
 dependencies:
   ffi: ^2.1.3
   minisound_platform_interface: #^2.0.1
-    path: ../minisound_platform_interface
+    git: 
+        url: https://github.com/XayUp/minisound-player.git
+        path: minisound_platform_interface
 
 dev_dependencies:
   flutter_lints: ^5.0.0
