--- a/minisound/pubspec.yaml
+++ b/minisound/pubspec.yaml
@@ -17,11 +17,17 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   minisound_platform_interface: #//^2.0.1
-    path: ../minisound_platform_interface
+    git: 
+        url: https://github.com/XayUp/minisound-player.git
+        path: minisound_platform_interface
   minisound_ffi: #^2.0.2
-    path: ../minisound_ffi
+    git: 
+        url: https://github.com/XayUp/minisound-player.git
+        path: minisound_ffi
   minisound_web: #^2.0.2
-    path: ../minisound_web
+    git: 
+        url: https://github.com/XayUp/minisound-player.git
+        path: minisound_web
 
 dev_dependencies:
   flutter_lints: ^5.0.0
