--- a/minisound_web/pubspec.yaml
+++ b/minisound_web/pubspec.yaml
@@ -14,7 +14,9 @@ environment:
 dependencies:
   js: ^0.6.3
   minisound_platform_interface: #^2.0.1
-    path: ../minisound_platform_interface
+    git:
+        url: https://github.com/XayUp/minisound-player.git
+        path: minisound_platform_interface
 
 dev_dependencies:
   flutter_lints: ^5.0.0
